fix: avoid jagged edges on safari

--- a/src/components/icon/icon.css
+++ b/src/components/icon/icon.css
@@ -11,6 +11,10 @@
   box-sizing: content-box !important;
 }
 
+svg {
+  transform: translate3d(0, 0, 0);
+}
+
 :host .ionicon {
   stroke: currentColor;
 }
